# f8-agent-a

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  battle_test_results.md  fly.toml  pyproject.toml
fast_agent/: __init__.py  agent.py  config.py  main.py
fast_agent/clients/: __init__.py  neo4j.py  supabase.py
fast_agent/tools/: __init__.py  fast_search.py  get_entities.py
scripts/: battle_test.py
tests/: __init__.py
ui/: Dockerfile  app.py  fly.toml
